--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,12 @@
       width: 30rem;
       font-size: 18px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+      border: transparent;
+      border-radius: 10px;
+
+      &:focus{
+        outline: none;
+      }
     }
   }
 
